# python-static-analyzer

./: .gitignore  README.md  pyproject.toml
examples/: sample_issues.c
rust/: Cargo.toml
rust/examples/: sample_issues.py
rust/src/: analyzer.rs  cli.rs  config.rs  lib.rs  main.rs  visitor.rs
rust/src/rules/: mod.rs  sa001_mutable_defaults.rs  sa002_unused_imports.rs  sa002_unused_variables.rs  sa003_broad_exceptions.rs  sa003_nesting.rs  sa004_shadowed_builtins.rs  sa005_complexity.rs  sa006_unused_variables.rs  sa007_nesting.rs  sa008_missing_return.rs  sa009_unreachable_code.rs
rust/tests/: analyzer.rs  cli.rs  golden.rs
src/: analyzer.rs  config.rs  diagnostics.rs  fnmatch.rs  main.rs  visitor.rs
src/c_static_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  diagnostics.py
src/c_static_analyzer/rules/: __init__.py  complexity.py  missing_return.py  nesting.py  unreachable_code.py  unused_variables.py
src/rules/: sa001_complexity.rs  sa004_missing_return.rs  sa005_unreachable_code.rs
src/static_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  config.py
src/static_analyzer/rules/: __init__.py  broad_exceptions.py  complexity.py  missing_return.py  mutable_defaults.py  nesting.py  shadowed_builtins.py  unreachable_code.py  unused_imports.py  unused_variables.py
tests/: analyzer.rs  cli.rs  conftest.py  golden.rs  helpers.py  test_analyzer.py  test_broad_exceptions.py  test_cli.py  test_complexity.py  test_missing_return.py  test_mutable_defaults.py  test_nesting.py  test_shadowed_builtins.py  test_unreachable_code.py  test_unused_imports.py  test_unused_variables.py
