[package]
name = "static-analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "static-analyzer"
path = "src/main.rs"

[lib]
name = "static_analyzer"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
rustpython-ruff_python_ast = "0.15.8"
rustpython-ruff_python_parser = "0.15.8"
rustpython-ruff_text_size = "0.15.8"
rustpython-ruff_source_file = "0.15.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
