[package]
name = "c-static-analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c-static-analyzer"
path = "src/main.rs"

[lib]
name = "c_static_analyzer"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tree-sitter = "0.26"
tree-sitter-c = "0.24"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
